sandbox/output
SearchStepDef.java:18: error: cannot find symbol
        SearchWorker worker = new SearchWorker();
        ^
  symbol:   class SearchWorker
  location: class SearchStepDef
SearchStepDef.java:18: error: cannot find symbol
        SearchWorker worker = new SearchWorker();
                                  ^
  symbol:   class SearchWorker
  location: class SearchStepDef
2 errors
